# vesp-uq

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_ablation.py  run_feasibility.py  train_discrete.py  train_multishell.py
benchmarks/: README.md  calibration_audit.md  gpu_verification.md  physical_budget_screening.md  vespuq_real_lunar_L90_report.md  vespuq_real_lunar_report.md  vespuq_risk_screening_results.md
configs/: ablation_real_lunar_regularization.yaml  ablation_real_lunar_shells.yaml  altitude_ood.yaml  discrete_multishell.yaml  discrete_single_shell.yaml  feasibility_suite.yaml  maxent_pareto_real_lunar.yaml  maxent_real_lunar_gl0420a_multishell.yaml  real_lunar_gl0420a.yaml  real_lunar_gl0420a_multishell.yaml  synthetic_stress_multishell.yaml  synthetic_stress_single.yaml  vespuq_real_lunar.yaml  vespuq_smoke.yaml
data/: lunar_grail_gl0420a_L60_residual.csv  lunar_grail_gl0420a_L60_residual.csv.metadata.json
docs/: SCIENTIFIC_CLAIMS.md  VESP_UQ_IAC_PLAN.md  VESP_UQ_LIMITATIONS.md  VESP_UQ_NEXT_STEPS.md
experimental_vesp/: __init__.py  advanced_analysis.py  analysis.py  artifacts.py  config.py  data.py  diagnostics.py  entropy.py  evaluate.py  feasibility.py  force_model.py  gravity_io.py  kernels.py  losses.py  lunar.py  metrics.py  models.py  neural_density.py  operators.py  probabilistic.py  real_gravity.py  run_ablation.py  solvers.py  sources.py  splits.py  synthetic.py  target_scaling.py  train.py  train_discrete.py  train_multishell.py  ui.py  units.py
scripts/: analyze_512_orbits.py  analyze_5days_orbits.py  analyze_trajectory_risk.py  analyze_uq_correlation.py  benchmark_gpu.py  benchmark_stm_dispersion.py  build_iac_pack.py  compare_models.py  geometry_shootout.py  make_real_lunar_dataset.py  make_synthetic_dataset.py  pre_results_check.py  regularizer_shootout.py  run_all_stage1.py  run_all_stage2.py  run_calibration_audit.py  run_experiment_suite.py  run_feasibility.py  run_physical_budget_screening.py  run_propagation.py  run_stage1.py  run_stage2.py  run_stlrps_propagation.py  smoke_test.py  summarize_experiments.py
tests/: smoke_test.py  test_acceptability.py  test_artifacts.py  test_entropy.py  test_gravity_io.py  test_kernels.py  test_lunar_contracts.py  test_maxent.py  (+35 more)
(+189 files in other folders)
